--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,11 +8,11 @@ spring:
         native:
           search-locations: /server-config-files # 不指定路径的话，默认搜索 resources 目录
         git:
-          uri: https://github.com/yqlArvin/configServer #配置文件所在仓库
+          uri: https://github.com/yqlArvin/config-server #配置文件所在仓库
           username: yqlArvin #登录账号
           password: yql15083870385 #登录密码
           default-label: master #配置文件分支
-          search-paths: config  #配置文件所在根目录
+          search-paths: src/main/resources/server-config-files  #配置文件所在根目录
 
 server:
   port: 3301
