--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,24 +1,21 @@
 #  https://github.com/hellxz/SpringCloudLearn
 spring:
   application:
-    name: config-server  # 应用名称
+    name: config-client  # 应用名称
   cloud:
     config:
-      #config服务端参数
-      server:
-        #        health:
-        #          repositories:
-        #            myservice:
-        #              label: mylabel
-        #            myservice-dev:
-        #              name: myservice
-        #              profiles: development
-        git:
-          uri: https://github.com/yqlArvin/config-server #配置文件所在仓库
-          username: yqlArvin #登录账号
-          password: yql15083870385 #登录密码
-          default-label: master #配置文件分支
-          search-paths: src/main/resources/server-config-files  #配置文件所在根目录
+      uri: http://localhost:3001/    #Config server的uri
+      profile: dev                          #指定的环境
+      label: master                        #指定分支
+      discovery:
+        enabled: true                     #开启配置服务发现
+        serviceId: config-server        #配置中心服务名
+      fail-fast: true                        #快速失败
+      retry:
+        initial-interval: 1100             #首次重试间隔时间，默认1000毫秒
+        multiplier: 1.1D                    #下一次重试间隔时间的乘数，比如开始1000，下一次就是1000*1.1=1100
+        max-interval: 2000              #最大重试时间，默认2000
+        max-attempts: 3                 #最大重试次数，默认6次
 
 server:
   port: 3301
